deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umedia-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: umedia-app
  template:
    metadata:
      labels:
        component: umedia-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: umedia-app
          image: cfennell/umedia_app:latest
          ports:
            - containerPort: 3000
