ip-service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: umedia-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: umedia-app
  ports:
    - port: 3000
      targetPort: 3000
