ip-service-redis-cache.yml
apiVersion: v1
kind: Service
metadata:
  name: umedia-redis-cache-ip-service
spec:
  type: ClusterIP
  selector:
    component: umedia-redis-cache
  ports:
    - port: 6380
      targetPort: 6380
