ip-service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: umedia-redis-ip-service
spec:
  type: ClusterIP
  selector:
    component: umedia-redis
  ports:
    - port: 6379
      targetPort: 6379
