ip-service-solr.yml
apiVersion: v1
kind: Service
metadata:
  name: umedia-solr-ip-service
spec:
  type: ClusterIP
  selector:
    component: umedia-solr
  ports:
    - port: 8983
      targetPort: 8983
